--- a/ssbuilder-web/views/new-story.jade
+++ b/ssbuilder-web/views/new-story.jade
@@ -1,10 +1,44 @@
 extends layout
 
 block content
-	a(href="stories") Stories
-	h1= title
-	form(name="addStory",method="post",action="/add-story")
-		input(type="text", placeholder="Title", name="storyTitle")
-		input(type="text", placeholder="url", name="url")
-		input(type="text", placeholder="caption", name="imageCaption")
-		button#btnSubmit(type="submit") submit
+  head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='description', content='')
+    meta(name='author', content='')
+    title Social Story Builder
+    // Bootstrap Core CSS
+    link(href='libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
+    // Custom CSS
+    link(href='css/story-list.css', rel='stylesheet')
+  body
+    // Navigation
+    nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+      .container
+        // Brand and toggle get grouped for better mobile display
+        .navbar-header
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='stories') Social Story Builder
+        #bs-example-navbar-collapse-1.collapse.navbar-collapse
+          ul.nav.navbar-nav
+            li
+              a(href='new-story') Create New Story
+    .container
+      .col-md-5
+        .form-area
+          form(role='form',method="post",action="/add-story")
+            br(style='clear:both')
+            h3(style='margin-bottom: 25px; text-align: center;') New Story
+            .form-group
+              input#name.form-control(type='text', name='storyTitle', placeholder='Title')
+            .form-group
+              input#subject.form-control(type='text', name='url', value="http://placehold.it/320x150", placeholder='Image')
+            .form-group
+              textarea#message.form-control(type='textarea', name='descrip', placeholder='Description', rows='7')
+              span.help-block
+            button#submit.btn.btn-primary.pull-right(type='submit', name='submit') Add Story
