--- a/ssbuilder-web/views/stories.jade
+++ b/ssbuilder-web/views/stories.jade
@@ -1,9 +1,61 @@
 extends layout
 
 block content
-	a(href="new-story") Create a Story
-	h1.
-		Stories
-	ul
-		each story, i in storylist
-			li= story.title
+  head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='description', content='')
+    meta(name='author', content='')
+    title Social Story Builder
+    // Bootstrap Core CSS
+    link(href='libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
+    // Custom CSS
+    link(href='css/story-list.css', rel='stylesheet')
+  body
+    // Navigation
+    nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+      .container
+        // Brand and toggle get grouped for better mobile display
+        .navbar-header
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='stories') Social Story Builder
+        #bs-example-navbar-collapse-1.collapse.navbar-collapse
+          ul.nav.navbar-nav
+            li
+              a(href='new-story') Create New Story
+    .container
+      .row
+        .col-md-3
+          p.lead Students
+          .list-group
+            a.list-group-item.active(href='#') Eric Forman
+            a.list-group-item(href='#') John Smith
+            a.list-group-item(href='#') Ann Keane
+        .col-md-9
+          p.lead Social Stories
+          .row
+            each story, i in storylist
+              .col-sm-4.col-lg-4.col-md-4
+                .thumbnail
+                  img(src='#{story.url}', alt='')
+                  .caption
+                    h4
+                      a(href='#')= story.title
+                    p= story.description
+    .container
+      hr
+      // Footer
+      footer
+        .row
+          .col-lg-12
+            p Copyright ©
+    // /.container
+    // jQuery
+    script(src='libs/jquery/dist/jquery.min.js')
+    // Bootstrap Core JavaScript
+    script(src='libs/bootstrap/dist/js/bootstrap.min.js')
