--- a/ssbuilder-web/views/new-story.jade
+++ b/ssbuilder-web/views/new-story.jade
@@ -31,7 +31,7 @@ block content
     .container
       .col-md-5
         .form-area
-          form(role='form',method="post",action="/add-story")
+          form(role='form',method="post",action="/api/add-story")
             br(style='clear:both')
             h3(style='margin-bottom: 25px; text-align: center;') New Story
             .form-group
