--- a/ssbuilder-ios/ssbuilder/Base.lproj/Main.storyboard
+++ b/ssbuilder-ios/ssbuilder/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Story Caption" lineBreakMode="wordWrap" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MuT-D4-cy1">
-                                <rect key="frame" x="20" y="333" width="280" height="215"/>
+                                <rect key="frame" x="20" y="333.00000031049865" width="280" height="215"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                                 <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
