--- a/ssbuilder-web/views/layout.jade
+++ b/ssbuilder-web/views/layout.jade
@@ -3,5 +3,12 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
+    link(href='/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
+    script(src='https://www.google.com/jsapi')
+    // JS
+    script(src='libs/angular/angular.min.js')
+    // ANGULAR CUSTOM
+    script(src='js/controllers/EditorCtrl.js')
+    script(src='js/app.js')
+  body(ng-app='ssbuilderApp')
     block content
