--- a/ssbuilder-web/public/templates/editor.html
+++ b/ssbuilder-web/public/templates/editor.html
@@ -9,18 +9,15 @@
 <div class="container">
   <div class="col-md-5">
     <div class="form-area">
-      <form role="form" method="post" action="/api/add-story"><br style="clear:both">
-        <h3 style="margin-bottom: 25px; text-align: center;">New Story</h3>
-        <div class="form-group">
-          <input id="name" type="text" name="storyTitle" placeholder="Title" class="form-control">
-        </div>
+      <form role="form" method="post" action={{formUrl}}><br style="clear:both">
+        <h3 style="margin-bottom: 25px; text-align: center;">Edit Panel</h3>
         <div class="form-group">
           <input id="subject" type="text" name="url" value="http://placehold.it/320x150" placeholder="Image" class="form-control">
         </div>
         <div class="form-group">
-          <textarea id="message" type="textarea" name="descrip" placeholder="Description" rows="7" class="form-control"></textarea><span class="help-block"></span>
+          <textarea id="message" type="textarea" name="descrip" placeholder="Caption" rows="7" class="form-control">{{caption}}</textarea><span class="help-block"></span>
         </div>
-        <button id="submit" type="submit" name="submit" class="btn btn-primary pull-right">Add Story</button>
+        <button id="submit" type="submit" name="submit" class="btn btn-primary pull-right">Done</button>
       </form>
     </div>
   </div>
@@ -52,24 +49,5 @@
         <!-- /.row -->
 
         <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p> </p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </footer>
-
-    </div>
-    <!-- /.container -->
-
-    <!-- jQuery -->
-    <script src="/libs/dist/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
