--- a/ssbuilder-web/views/layout.jade
+++ b/ssbuilder-web/views/layout.jade
@@ -6,9 +6,36 @@ html
     link(href='/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     script(src='https://www.google.com/jsapi')
     // JS
-    script(src='libs/angular/angular.min.js')
+    script(src='/libs/angular/angular.min.js')
     // ANGULAR CUSTOM
-    script(src='js/controllers/EditorCtrl.js')
-    script(src='js/app.js')
+    script(src='/js/controllers/EditorCtrl.js')
+    script(src='/js/app.js')
   body(ng-app='ssbuilderApp')
+    // Navigation
+    nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+      .container
+        // Brand and toggle get grouped for better mobile display
+        .navbar-header
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='/stories') Social Story Builder
+        #bs-example-navbar-collapse-1.collapse.navbar-collapse
+          ul.nav.navbar-nav
+            li
+              a(href='/edit-story') Create New Story
     block content
+    .container
+      hr
+      // Footer
+      footer
+        .row
+          .col-lg-12
+            p
+    // /.container
+    // jQuery
+    script(src='/libs/jquery/dist/jquery.min.js')
+    // Bootstrap Core JavaScript
+    script(src='/libs/bootstrap/dist/js/bootstrap.min.js')
