--- a/ssbuilder-web/views/stories.jade
+++ b/ssbuilder-web/views/stories.jade
@@ -13,21 +13,6 @@ block content
     // Custom CSS
     link(href='css/story-list.css', rel='stylesheet')
   body
-    // Navigation
-    nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
-      .container
-        // Brand and toggle get grouped for better mobile display
-        .navbar-header
-          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='stories') Social Story Builder
-        #bs-example-navbar-collapse-1.collapse.navbar-collapse
-          ul.nav.navbar-nav
-            li
-              a(href='new-story') Create New Story
     .container
       .row
         .col-md-3
@@ -43,19 +28,12 @@ block content
               .col-sm-4.col-lg-4.col-md-4
                 .thumbnail
                   img(src='#{story.url}', alt='', style="height: 150px; width: 320px; overflow:hidden; position:relative;" )
-                  .caption
+                  .caption(style="text-align:center;")
                     h4
                       a(href='#')= story.title
                     p= story.description
-    .container
-      hr
-      // Footer
-      footer
-        .row
-          .col-lg-12
-            p
-    // /.container
-    // jQuery
-    script(src='libs/jquery/dist/jquery.min.js')
-    // Bootstrap Core JavaScript
-    script(src='libs/bootstrap/dist/js/bootstrap.min.js')
+                    p
+                      a.btn.btn-default(href='edit-story/#{story._id}') Edit
+                      | &nbsp;
+                      | &nbsp;
+                      a.btn.btn-default(href='#') Delete
