--- a/ssbuilder-web/public/templates/editor.html
+++ b/ssbuilder-web/public/templates/editor.html
@@ -12,7 +12,10 @@
       <form role="form" method="post" action={{formUrl}}><br style="clear:both">
         <h3 style="margin-bottom: 25px; text-align: center;">Edit Panel</h3>
         <div class="form-group">
-          <input id="subject" type="text" name="url" value="http://placehold.it/320x150" placeholder="Image" class="form-control">
+            <img id="imgSrc" style="height: 250px; width: 420px;" src={{image}} alt="">
+        </div>
+        <div class="form-group">
+          <input id="subject" style="display:none;" type="text" name="url" value={{image}} placeholder="Image" class="form-control">
         </div>
         <div class="form-group">
           <textarea id="message" type="textarea" name="descrip" placeholder="Caption" rows="7" class="form-control">{{caption}}</textarea><span class="help-block"></span>
