--- a/ssbuilder-web/views/layout.jade
+++ b/ssbuilder-web/views/layout.jade
@@ -25,8 +25,28 @@ html
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
-              a(href='/edit-story') Create New Story
+              // a(href='/edit-story' data-toggle='modal', data-target='#myModal') Create New Story
+              a(href='#' data-toggle='modal', data-target='#myModal') Create New Board
     block content
+    #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
+      .modal-dialog(role='document')
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-label='Close')
+              span(aria-hidden='true') ×
+            h4#myModalLabel.modal-title Create New Board
+          .form-area
+            form(role='form', method='post', action='/edit-new-story')
+              .modal-body
+                .form-group
+                  input#name.form-control(type='text', name='storyTitle', placeholder='Title')
+                .form-group
+                  textarea#message.form-control(type='textarea', name='descrip', placeholder='Description', rows='7')
+                  span.help-block
+              .modal-footer
+                button.btn.btn-default(type='button', data-dismiss='modal') Close
+                button.btn.btn-primary(type='submit', name='submit') Create
+
     .container
       hr
       // Footer
