Can delete stories now.

--- a/ssbuilder-web/views/stories.jade
+++ b/ssbuilder-web/views/stories.jade
@@ -36,7 +36,7 @@ block content
                       a.btn.btn-default(href='edit-story/#{story._id}') Edit
                       | &nbsp;
                       | &nbsp;
-                      a.btn.btn-default(href='#') Delete
+                      a.btn.btn-default(href='/delete-story/' + story._id) Delete
     .container
       hr
       // Footer
