--- a/ssbuilder-web/views/layout.jade
+++ b/ssbuilder-web/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+html(ng-app='')
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -7,6 +7,7 @@ html
     script(src='https://www.google.com/jsapi')
     // JS
     script(src='/libs/angular/angular.min.js')
+    script(src='/libs/jquery/dist/jquery.min.js')
     // ANGULAR CUSTOM
     script(src='/js/controllers/EditorCtrl.js')
     script(src='/js/app.js')
@@ -25,8 +26,9 @@ html
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
-              // a(href='/edit-story' data-toggle='modal', data-target='#myModal') Create New Story
-              a(href='#' data-toggle='modal', data-target='#myModal') Create New Board
+              a(href='#' data-toggle='modal', data-target='#myModal') New Board
+            li  
+              a(href='#' data-toggle='modal', data-target='#studentModal') New Student
     block content
     #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
       .modal-dialog(role='document')
@@ -46,6 +48,21 @@ html
               .modal-footer
                 button.btn.btn-default(type='button', data-dismiss='modal') Close
                 button.btn.btn-primary(type='submit', name='submit') Create
+    #studentModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
+      .modal-dialog(role='document')
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-label='Close')
+              span(aria-hidden='true') ×
+            h4#myModalLabel.modal-title Add New Student
+          .form-area
+            form(role='form', method='post', action='/add-student')
+              .modal-body
+                .form-group
+                  input#name.form-control(type='text', name='studentName', placeholder='Name')
+              .modal-footer
+                button.btn.btn-default(type='button', data-dismiss='modal') Close
+                button.btn.btn-primary(type='submit', name='submit') Add
 
     .container
       hr
