can copy boards between students and start of community boards

--- a/ssbuilder-web/views/layout.jade
+++ b/ssbuilder-web/views/layout.jade
@@ -36,6 +36,8 @@ html(ng-app='')
           a.navbar-brand(href='/stories') Social Story Builder
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           ul.nav.navbar-nav
+            li  
+              a(href='/community') Community Boards
             li
               a.openBoardModal(href='#' data-toggle='modal', data-target='#myModal') New Board
             li  
