--- a/ssbuilder-web/views/edit-story.jade
+++ b/ssbuilder-web/views/edit-story.jade
@@ -13,6 +13,17 @@ block content
     // Custom CSS
     link(href='/css/story-list.css', rel='stylesheet')
   body
+    script(type='text/javascript').
+      $(document).on("click", ".openCopyModal", function () {
+        $.get( "/api/students", function( data ) {
+          console.log(data);
+          $(".modal-body #studentCopy").append(function() {
+            return $.map(data, function(el, i) {
+              return '<option value=' + el._id + '>' + el.name + '</option>';
+            });
+          });
+        });
+      });
     .container
       .row
         .col-md-9
@@ -36,4 +47,23 @@ block content
                           | &nbsp;
                           | &nbsp;
                           a.btn.btn-default(href='#') Delete
+              button.btn.btn-default.openCopyModal(type='button' data-toggle='modal', data-target='#copyModal') Copy
+              | &nbsp
+              | &nbsp
               button#submit.btn.btn-primary(type='submit', name='submit') Done
+    #copyModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='copyModal')
+      .modal-dialog(role='document')
+        .modal-content
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-label='Close')
+              span(aria-hidden='true') ×
+            h4#copyModal.modal-title Copy Board to Different Student
+          .form-area
+            form(role='form', method='post', action='/copy-story/'+story._id)
+              .modal-body
+                .form-group
+                  | Assign to student: 
+                  select(id='studentCopy' name='studentCopy')
+              .modal-footer
+                button.btn.btn-default(type='button', data-dismiss='modal') Close
+                button.btn.btn-primary(type='submit', name='submit') Copy
