--- a/ssbuilder-web/views/view.jade
+++ b/ssbuilder-web/views/view.jade
@@ -79,7 +79,7 @@ html(lang='en')
       footer
         .row
           .col-lg-12
-            p Copyright © Your Website 2014
+            p Copyright © Social Story Builder 2015
         // /.row
     // /.container
     // jQuery
