--- a/ssbuilder-web/public/css/full-slider.css
+++ b/ssbuilder-web/public/css/full-slider.css
@@ -7,6 +7,7 @@
 html,
 body {
     height: 100%;
+    font-family: Short Stack;
 }
 
 .carousel,
@@ -19,16 +20,22 @@ body {
     height: 100%;
 }
 
+.carousel-caption {
+    background-color: rgba(0,0,0,0.5);
+    color: yellow;
+}
+
 /* Background images are set within the HTML using inline CSS, not here */
 
 .fill {
     width: 100%;
     height: 100%;
     background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    background-repeat: no-repeat;
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    background-size: contain;
+    -o-background-size: contain;
 }
 
 footer {
