--- a/ssbuilder-web/views/community.jade
+++ b/ssbuilder-web/views/community.jade
@@ -12,6 +12,7 @@ block content
     link(href='/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     // Custom CSS
     link(href='css/story-list.css', rel='stylesheet')
+    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Short+Stack')
   body
     script(type='text/javascript').
       $(document).on("click", ".openDownloadModal", function () {
