--- a/ssbuilder-web/views/edit-panel.jade
+++ b/ssbuilder-web/views/edit-panel.jade
@@ -12,5 +12,6 @@ block content
     link(href='/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     // Custom CSS
     link(href='/css/story-list.css', rel='stylesheet')
+    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Short+Stack')
   body
     editor(panelData='#{panel}')
