--- a/ssbuilder-web/views/layout.jade
+++ b/ssbuilder-web/views/layout.jade
@@ -3,6 +3,7 @@ html(ng-app='')
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Short+Stack')
     link(href='/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     script(src='https://www.google.com/jsapi')
     // JS
