--- a/ssbuilder-web/views/stories.jade
+++ b/ssbuilder-web/views/stories.jade
@@ -10,6 +10,7 @@ block content
     title Social Story Builder
     // Bootstrap Core CSS
     link(href='/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
+    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Short+Stack')
     // Custom CSS
     link(href='/css/story-list.css', rel='stylesheet')
   body
