Changed font in view for story and altered button's looks

--- a/ssbuilder-web/public/css/full-slider.css
+++ b/ssbuilder-web/public/css/full-slider.css
@@ -21,8 +21,13 @@ body {
 }
 
 .carousel-caption {
-    background-color: rgba(0,0,0,0.5);
-    color: yellow;
+    /*
+    background-color: rgba(0,0,0,0.5); opaque black box behind
+    color: #3f62a1; dark, pastel blue
+    text-shadow: 0 0 0.2em #F87, 0 0 0.2em #F87; neon red shadow
+    */
+    color: white; 
+    text-shadow: black 0.1em 0.1em 0.2em;
 }
 
 /* Background images are set within the HTML using inline CSS, not here */
