--- a/ssbuilder-web/public/css/story-list.css
+++ b/ssbuilder-web/public/css/story-list.css
@@ -10,12 +10,14 @@ body {
 }
 
 a.btn#edit {
+    color:white;
     background: #398525; /* old browsers */
     background: -moz-linear-gradient(top, #8DD297 0%, #398525 100%); /* firefox */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8DD297), color-stop(100%,#398525)); /* webkit */
 }   
 
 a.btn#delete {
+    color:white;
     background: #852539; /* old browsers */
     background: -moz-linear-gradient(top, #d2978d 0%, #852539 100%); /* firefox */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#d2978d), color-stop(100%,#852539)); /* webkit */
