--- a/ssbuilder-web/public/css/story-list.css
+++ b/ssbuilder-web/public/css/story-list.css
@@ -36,9 +36,14 @@ a.btn#delete {
     border-radius: 4px;
 }
 
+.carousel-caption{
+    background-color: black;
+}
+
 .caption {
     height: 130px;
     overflow: hidden;
+    
 }
 
 .caption h4 {
