--- a/ssbuilder-web/views/edit-panel.jade
+++ b/ssbuilder-web/views/edit-panel.jade
@@ -1,17 +1,41 @@
-extends layout
-
-block content
+doctype html
+html
   head
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(name='description', content='')
-    meta(name='author', content='')
-    title Social Story Builder
-    // Bootstrap Core CSS
+    title= title
+    link(rel='stylesheet', href='/stylesheets/style.css')
     link(href='/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
-    // Custom CSS
-    link(href='/css/story-list.css', rel='stylesheet')
-    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Short+Stack')
-  body
-    editor(panelData='#{panel}')
+    script(src='https://www.google.com/jsapi')
+    // JS
+    script(src='/libs/angular/angular.min.js')
+    // ANGULAR CUSTOM
+    script(src='/js/controllers/EditorCtrl.js')
+    script(src='/js/app.js')
+  body(ng-app='ssbuilderApp')
+    // Navigation
+    nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+      .container
+        // Brand and toggle get grouped for better mobile display
+        .navbar-header
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='/stories') Social Story Builder
+        #bs-example-navbar-collapse-1.collapse.navbar-collapse
+          ul.nav.navbar-nav
+            li
+              a(href='/edit-story') Create New Story
+    .container
+      editor(panelData='#{panel}')
+      hr
+      // Footer
+      footer
+        .row
+          .col-lg-12
+            p
+    // /.container
+    // jQuery
+    script(src='/libs/jquery/dist/jquery.min.js')
+    // Bootstrap Core JavaScript
+    script(src='/libs/bootstrap/dist/js/bootstrap.min.js')
