--- a/ssbuilder-web/views/stories.jade
+++ b/ssbuilder-web/views/stories.jade
@@ -51,7 +51,7 @@ block content
                       h4
                         a(href='view/' + story._id)= story.title
                       p
-                        a#edit.btn.btn-primary(href='edit-story/#{story._id}') Edit
+                        a#edit.btn.btn-primary(href='/edit-story/#{story._id}') Edit
                         | &nbsp;
                         | &nbsp;
                         a#delete.btn.btn-danger(href='/delete-story/' + story._id) Delete
