--- a/SocialStoryBuilder/SocialStoryBuilder/Base.lproj/LaunchScreen.storyboard
+++ b/SocialStoryBuilder/SocialStoryBuilder/Base.lproj/LaunchScreen.storyboard
@@ -4,6 +4,11 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="ShortStack-Regular.ttf">
+            <string>ShortStack</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
@@ -17,10 +22,15 @@
                                 <rect key="frame" x="246" y="20" width="276" height="226"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
+                                <fontDescription key="fontDescription" name="ShortStack" family="Short Stack" pointSize="37"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SocialStoryBuilderLogo.png" id="vNA-Qg-g4H">
+                                <rect key="frame" x="166" y="385" width="437" height="357"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <animations/>
+                            </imageView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -28,7 +38,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="67.840000000000003" y="640"/>
+            <point key="canvasLocation" x="67" y="640"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="SocialStoryBuilderLogo.png" width="515" height="471"/>
+    </resources>
 </document>
